--- a/app/src/main/res/layout/activity_tweet_list.xml
+++ b/app/src/main/res/layout/activity_tweet_list.xml
@@ -13,9 +13,9 @@
       app:popupTheme="@style/Theme.AppCompat.Light"/>
 
   <FrameLayout
-      android:id="@+id/container"
-      android:layout_below="@id/toolbar"
+      android:id="@+id/container_tweet_list"
       android:layout_width="match_parent"
-      android:layout_height="match_parent"/>
+      android:layout_height="match_parent"
+      android:layout_below="@id/toolbar"/>
 
 </RelativeLayout>
