--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
   <color name="grey600">#757575</color>
   <color name="black">#000000</color>
   <color name="white">#FFFFFF</color>
+  <color name="black_alpha">#33000000</color>
 
   <!-- Others -->
 </resources>
