--- a/app/src/main/res/layout/part_loading.xml
+++ b/app/src/main/res/layout/part_loading.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:wheel="http://schemas.android.com/apk/res-auto"
     android:id="@+id/loading"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-  <ProgressBar
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_gravity="center|center_vertical"/>
+  <com.pnikosis.materialishprogress.ProgressWheel
+      android:id="@+id/progress_wheel"
+      android:layout_width="40dp"
+      android:layout_height="40dp"
+      android:layout_gravity="center|center_vertical"
+      wheel:matProg_barColor="?attr/colorPrimary"
+      wheel:matProg_progressIndeterminate="true"/>
 
 </FrameLayout>
