--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,21 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/drawer_layout"
+    android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:fitsSystemWindows="true">
 
-  <android.support.v7.widget.Toolbar
-      android:id="@+id/toolbar"
+  <android.support.design.widget.CoordinatorLayout
+      xmlns:app="http://schemas.android.com/apk/res-auto"
+      android:id="@+id/main_content"
       android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:background="?attr/colorPrimary"
-      app:elevation="4dp"
-      app:popupTheme="@style/Theme.AppCompat.Light"/>
+      android:layout_height="match_parent">
 
-  <FrameLayout
-      android:id="@+id/container"
-      android:layout_below="@id/toolbar"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"/>
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-</RelativeLayout>
+      <android.support.v7.widget.Toolbar
+          android:id="@+id/toolbar"
+          android:layout_width="match_parent"
+          android:layout_height="?attr/actionBarSize"
+          android:background="?attr/colorPrimary"
+          app:elevation="4dp"
+          app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+          app:layout_scrollFlags="scroll|enterAlways"/>
+
+    </android.support.design.widget.AppBarLayout>
+
+    <FrameLayout
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:layout_height="match_parent"/>
+
+  </android.support.design.widget.CoordinatorLayout>
+
+  <android.support.design.widget.NavigationView
+      android:id="@+id/nav_view"
+      android:layout_height="match_parent"
+      android:layout_width="wrap_content"
+      android:layout_gravity="start"
+      android:fitsSystemWindows="true"
+      app:headerLayout="@layout/nav_header"
+      app:menu="@menu/drawer_menu"/>
+
+</android.support.v4.widget.DrawerLayout>
