--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,13 +27,26 @@
           app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
           app:layout_scrollFlags="scroll|enterAlways"/>
 
+      <android.support.design.widget.TabLayout
+          android:id="@+id/tab_layout"
+          app:tabMode="fixed"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"/>
+
     </android.support.design.widget.AppBarLayout>
 
-    <FrameLayout
-        android:id="@+id/container"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/view_pager"
         android:layout_width="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:src="@drawable/ic_twitter_white_24dp"/>
 
   </android.support.design.widget.CoordinatorLayout>
 
